# starter

./: .editorconfig  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  Makefile  README.md  compile.yaml  compiled_groundstation.yaml  flake.nix  pyproject.toml  renovate.json5  setup.cfg  treefmt.nix
designs/: compiled.yaml  cube_design.yaml  explore_cube.yaml
fabricfunctions/: add.py
src/cube/: analysis.py  export.py  geometry.py  parametrisation.py  renderer.py  rendering.py  utils.py
tests/: assets.py
tests/cube/: conftest.py  test_analysis.py  test_end_to_end.py  test_export.py  test_geometry.py  test_parametrisation.py  test_renderer.py  test_rendering.py
tests/cube/data/: cube.step
tests/cube/service/: __init__.py  conftest.py  test_server.py
tests/fabricfunctions/: test_add.py
