[tool.poetry]
name = "generative-starter-project"
version = "2.3.0"
description = "Starter Project for Generative Fabric Functions"
authors = ["Generative Engineering <degenerates@generative.vision>"]
packages = [
    { include = "cube", from = "src" },
]

[[tool.poetry.source]]
name = "generative-gitlab"
url = "https://gitlab.com/api/v4/groups/14110432/-/packages/pypi/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.10"
generative-fabric-definitions = { version = "*", source = "generative-gitlab" }

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.1.2"
ruff = "^0.1.8"

[tool.poetry.scripts]
server = 'generative.fabric.http.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Linter config

[tool.ruff]
line-length = 99
select = ["E", "F", "B", "Q", "C", "N", "UP"]
target-version = "py310"

[tool.mypy]
strict = true
files = "src,tests"
warn_unused_configs = true
namespace_packages = true
warn_return_any = true
show_error_context = true
show_error_codes = true
pretty = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = "tests.*"
# Too noisy to have `-> None` on every test
# and to type some Generator fixtures is hellish
# Unfortunately you need to turn *both* these off for this to work.
allow_incomplete_defs = true
allow_untyped_defs = true



[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--tb=short --doctest-modules --doctest-continue-on-failure"
