[tool.poetry]
name = "generative-starter-project"
version = "4.0.0"
description = "Starter Project for Generative Fabric Functions"
authors = ["Generative Engineering <degenerates@generative.vision>"]
packages = [{ include = "fabricfuncitions" }]

[[tool.poetry.source]]
name = "generative-gitlab"
url = "https://gitlab.com/api/v4/groups/14110432/-/packages/pypi/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"

[[tool.poetry.dependencies.generative-fabric-definitions]]
version = "37.1.8"
source = "generative-gitlab"
extras = ["local"]


[tool.poetry.group.dev.dependencies]
mypy = "1.13.0"
ruff = "^0.7.3"
pytest = "8.3.3"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core==1.9.0"]

[tool.ruff]
line-length = 99
lint.select = ["E", "F", "B", "Q", "C", "N", "UP"]
target-version = "py310"

[tool.mypy]
files = "fabricfunctions,tests"
namespace_packages = true
pretty = true
python_version = "3.10"
show_error_codes = true
show_error_context = true
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# Too noisy to have `-> None` on every test
# and to type some Generator fixtures is hellish
# Unfortunately you need to turn *both* these off for this to work.
allow_incomplete_defs = true
allow_untyped_defs = true
module = "tests.*"

[tool.pytest.ini_options]
addopts = "--tb=short --doctest-modules --doctest-continue-on-failure"
minversion = "7.0"
